Maven configuration that can use gluon client + graalvm